Fix overflow scroll problem

--- a/website/src/components/PatchCard.module.css
+++ b/website/src/components/PatchCard.module.css
@@ -34,8 +34,10 @@
   width: 25vw;
   padding: 20px;
 
-  min-height: 60vh;
+  max-height: 60vh;
   background-color: #fff;
-  /* overflow:auto; */
+  overflow-y: scroll;
+  position: relative;
+  z-index: 101;
 }
 
